UI (fix): while listing supermasters, ip address is not visible when using dark theme.

--- a/templates/default/list_supermasters.html
+++ b/templates/default/list_supermasters.html
@@ -26,7 +26,7 @@
                 <tbody>
                 {% for server in supermasters %}
                     <tr>
-                        <td><span class="badge bg-light text-dark">{{ server['master_ip'] }}</span></td>
+                        <td><span class="badge supermaster-ip">{{ server['master_ip'] }}</span></td>
                         <td>{{ server['ns_name'] }}</td>
                         <td>{{ server['account'] }}</td>
                         {% if perm_sm_edit %}
