--- a/templates/default/add_perm_templ.html
+++ b/templates/default/add_perm_templ.html
@@ -19,7 +19,7 @@
                 </div>
                 <div class="card-body">
                     <div class="mb-3">
-                        <label for="templ_name" class="form-label">{% trans %}Name{% endtrans %}</label>
+                        <label for="templ_name" class="form-label">{% trans %}Name{% endtrans %} *</label>
                         <input class="form-control form-control-sm" type="text" id="templ_name" name="templ_name" value="" required>
                         <div class="invalid-feedback">{% trans %}Provide a name for your template{% endtrans %}</div>
                         <small class="text-muted">{% trans %}A short, descriptive name for this permission set{% endtrans %}</small>
