--- a/templates/default/add_user.html
+++ b/templates/default/add_user.html
@@ -17,7 +17,7 @@
                     <input type="hidden" name="_token" value="{{ csrf_token }}">
                     
                     <div class="mb-3">
-                        <label for="username" class="form-label">{% trans %}Username{% endtrans %}</label>
+                        <label for="username" class="form-label">{% trans %}Username{% endtrans %} *</label>
                         <input class="form-control form-control-sm" type="text" id="username" name="username" value="{{ username }}" required>
                         <div class="invalid-feedback">{% trans %}Provide user name{% endtrans %}</div>
                     </div>
@@ -29,13 +29,13 @@
                     </div>
 
                     <div class="mb-3">
-                        <label for="email" class="form-label">{% trans %}Email address{% endtrans %}</label>
+                        <label for="email" class="form-label">{% trans %}Email address{% endtrans %} *</label>
                         <input class="form-control form-control-sm" type="email" id="email" name="email" value="{{ email }}" required>
                         <div class="invalid-feedback">{% trans %}Provide email{% endtrans %}</div>
                     </div>
 
                     <div class="mb-3">
-                        <label for="password" class="form-label">{% trans %}Password{% endtrans %}</label>
+                        <label for="password" class="form-label">{% trans %}Password{% endtrans %} *</label>
                         <div class="input-group input-group-sm">
                             <input class="form-control form-control-sm" type="password" id="password" name="password" value="" {% if not ldap_use %}required{% endif %}>
                             <button class="btn btn-sm btn-outline-secondary" type="button" onclick="showPassword('password', 'eye')"><i class="bi bi-eye-fill text-secondary" id="eye"></i></button>
