--- a/templates/default/add_zone_master.html
+++ b/templates/default/add_zone_master.html
@@ -23,7 +23,7 @@
                     <input type="hidden" name="_token" value="{{ csrf_token }}">
 
                     <div class="mb-3">
-                        <label for="domain" class="form-label">{% trans %}Zone name{% endtrans %}</label>
+                        <label for="domain" class="form-label">{% trans %}Zone name{% endtrans %} *</label>
                         <input data-testid="zone-name-input" class="form-control form-control-sm" type="text" id="domain" name="domain" value="{{ domain_value }}" required>
                         <div class="invalid-feedback">{% trans %}Provide zone name{% endtrans %}</div>
                         <small class="text-muted">{% trans %}Example: example.com{% endtrans %}</small>
