--- a/templates/default/add_zone_slave.html
+++ b/templates/default/add_zone_slave.html
@@ -23,14 +23,14 @@
                     <input type="hidden" name="_token" value="{{ csrf_token }}">
 
                     <div class="mb-3">
-                        <label for="domain" class="form-label">{% trans %}Zone name{% endtrans %}</label>
+                        <label for="domain" class="form-label">{% trans %}Zone name{% endtrans %} *</label>
                         <input class="form-control form-control-sm" type="text" id="domain" name="domain" value="{{ domain_value }}" required>
                         <div class="invalid-feedback">{% trans %}Provide zone name{% endtrans %}</div>
                         <small class="text-muted">{% trans %}Example: example.com{% endtrans %}</small>
                     </div>
 
                     <div class="mb-3">
-                        <label for="slave_master" class="form-label">{% trans %}IP address of master NS{% endtrans %}</label>
+                        <label for="slave_master" class="form-label">{% trans %}IP address of master NS{% endtrans %} *</label>
                         <input class="form-control form-control-sm" type="text" id="slave_master" name="slave_master" value="{{ slave_master_value }}" required>
                         <div class="invalid-feedback">{% trans %}Provide IP address{% endtrans %}</div>
                         <small class="text-muted">{% trans %}IP address of the master name server (can be IPv4 or IPv6){% endtrans %}</small>
