--- a/templates/default/api_key_edit.html
+++ b/templates/default/api_key_edit.html
@@ -17,7 +17,7 @@
                     <input type="hidden" name="_token" value="{{ csrf_token }}">
                     
                     <div class="mb-3">
-                        <label for="name" class="form-label">{% trans %}Name{% endtrans %}</label>
+                        <label for="name" class="form-label">{% trans %}Name{% endtrans %} *</label>
                         <input type="text" class="form-control" id="name" name="name" required maxlength="255" value="{{ api_key.name }}">
                         <div class="invalid-feedback">{% trans %}Please provide a name for this API key{% endtrans %}</div>
                         <div class="form-text">{% trans %}A descriptive name to help you identify this key{% endtrans %}</div>
