--- a/templates/default/edit_user.html
+++ b/templates/default/edit_user.html
@@ -27,7 +27,7 @@
                     <input type="hidden" name="number" value="{{ edit_id }}">
 
                     <div class="mb-3">
-                        <label for="username" class="form-label">{% trans %}Username{% endtrans %}</label>
+                        <label for="username" class="form-label">{% trans %}Username{% endtrans %} *</label>
                         <input class="form-control form-control-sm" type="text" id="username" name="username" value="{{ user['username'] }}" required>
                         <div class="invalid-feedback">{% trans %}Provide user name{% endtrans %}</div>
                     </div>
@@ -39,7 +39,7 @@
                     </div>
 
                     <div class="mb-3">
-                        <label for="email" class="form-label">{% trans %}Email address{% endtrans %}</label>
+                        <label for="email" class="form-label">{% trans %}Email address{% endtrans %} *</label>
                         <input class="form-control form-control-sm" type="email" id="email" name="email" value="{{ user['email'] }}" required>
                         <div class="invalid-feedback">{% trans %}Provide email{% endtrans %}</div>
                     </div>
